--- a/css/templates.css
+++ b/css/templates.css
@@ -1,14 +1,23 @@
     /* Header Area */
+    .header_main_page {
+      background-color: rgb(0, 0, 215);
+      margin-bottom: 20px;
+    }
+
     .header_main_page img {
       height: 56px;
       padding-left: 28px;
     }
 
-     /* Footer Area */
+    /* Footer Area */
     .template_footer {
-      height: 100px;
-      gap: 50px;
+      background-color: rgb(0, 0, 215);
 
+      margin-top: 20px;
+      height: 50px;
+      bottom: 0;
+
+      position: static;
       display: flex;
       justify-content: center;
       align-items: center;
