--- a/css/generaly.css
+++ b/css/generaly.css
@@ -1,10 +1,5 @@
-    body {
-      background: linear-gradient(135deg,
-          rgb(0, 0, 255) 5%,
-          rgb(4, 4, 35) 25%,
-          rgb(0, 0, 255) 50%,
-          rgb(4, 4, 35) 75%,
-          rgb(0, 0, 255) 100%);
+    body { 
+      background-color: rgb(0, 0, 126);
       margin: 0;
       height: 100%;
       color: white;
@@ -14,16 +9,12 @@
       color: white;
       text-decoration: none;
     }
+
     a:visited {
       color: white;
       text-decoration: none;
     }
+
     .d_none {
       display: none;
-    }
-
-    @media (min-height: 1500px) {
-      body {
-        height: 100vh;
-      }
     }
